syntax = "proto3";

package planet;

option go_package = "planetpb";

// We can define our planet and all of its corresponding data here, we can split this up later if we want.
message Planet {
    string planet_id = 1;
    string name = 2;
    repeated Facts facts = 3;
    string image = 4;
    BasicInformation basic_information = 5;
}

message Facts {
    string title = 1;
    string fact = 2; 
}

message BasicInformation{
    string alternate_name = 1;
    int32 number_of_satelites = 2;
    string star_system = 3;
    string most_abundant_resource = 4;
}

message ReadPlanetRequest {
    string planet_id = 1;   // We can fetch by the mongodb ID, which we will have on the frontend Vue app.
}

message ReadPlanetResponse {
    Planet planet = 1; // List of planets
}

message ListPlanetRequest {
}

message ListPlanetResponse {
    repeated Planet planet = 1; // List of planets
}

service PlanetService {
    rpc ReadPlanet (ReadPlanetRequest) returns (ReadPlanetResponse); // return NOT_FOUND if not found
    rpc ListPlanet (ListPlanetRequest) returns (ListPlanetResponse); // return NOT_FOUND if not found
}