syntax = "proto3";

package star;

option go_package = "starpb";

// We can define our star and all of its corresponding data here, we can split this up later if we want.
message Star {
    string star_id = 1;
    string name = 2;
    repeated Facts facts = 3;
    string image = 4;
    BasicInformation basic_information = 5;
}

message Facts {
    string title = 1;
    string fact = 2; 
}

message BasicInformation{
    double mass = 1;
    string class = 2;
    double radius = 3;
    string system = 4;
    double temperature = 5;
    double age = 6;
}

message ReadStarRequest {
    string name = 1;
}

message ReadStarResponse {
    Star star = 1; // List of planets
}

message ListStarRequest {
    int64 skip = 1;
    string class = 2;
}

message ListStarResponse {
    repeated Star star = 1; // List of planets
    int64 number_of_documents = 2;
}

service StarService {
    rpc ReadStar (ReadStarRequest) returns (ReadStarResponse); // return NOT_FOUND if not found
    rpc ListStar (ListStarRequest) returns (ListStarResponse); // return NOT_FOUND if not found
}